--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.associations": {
     "iosfwd": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "cmath": "cpp",
+    "cstdlib": "cpp"
   }
 }
