Implemented O(1) Insert, Delete, and Random retrieval using vector & unordered_map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "iosfwd": "cpp",
     "string": "cpp",
     "cmath": "cpp",
-    "cstdlib": "cpp"
+    "cstdlib": "cpp",
+    "unordered_map": "cpp"
   }
 }
