--- a/Arrays/.vscode/settings.json
+++ b/Arrays/.vscode/settings.json
@@ -2,6 +2,11 @@
   "files.associations": {
     "vector": "cpp",
     "random": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "array": "cpp",
+    "functional": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp"
   }
 }
