Implemented product except self using division with zero handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "string": "cpp",
     "cmath": "cpp",
     "cstdlib": "cpp",
-    "unordered_map": "cpp"
+    "unordered_map": "cpp",
+    "atomic": "cpp"
   }
 }
